--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,11 @@
 asgiref==3.6.0
-dj-database-url==1.2.0
-Django==4.1.6
-django-heroku==0.3.1
-django-request==1.6.2
+certifi==2022.12.7
+charset-normalizer==3.0.1
+Django==4.1.5
 djangorestframework==3.14.0
-domain-coordinator==0.9.2
-gunicorn==20.1.0
 idna==3.4
-psycopg2==2.9.5
-python-dateutil==2.8.2
-python-decouple==3.7
 pytz==2022.7.1
 requests==2.28.2
-six==1.16.0
 sqlparse==0.4.3
+tzdata==2022.7
 urllib3==1.26.14
-whitenoise==6.3.0
